[package]
name = "keygenerator"
version = "1.0.2"
authors = ["Jan Szczesny"]
description = "STARS key file generator"
homepage = "https://stars.kek.jp"
repository = "https://github.com/IMSS-PhotonFactory/"
license = "MIT"
edition = "2024"

[profile.release]
lto = true
opt-level = 2
panic = "abort"
strip = "symbols"

[dependencies]
rand = "0.9.2"
